Add DynamoDB reader for recipes and shopping lists